# slam_in_autonomous_driving

./: .gitignore
scripts/: plot_ch3_gnss.py  plot_ch3_gnss_3d.py  plot_ch3_state.py
slam_in_autonomous_driving_ros/: READMED.md
slam_in_autonomous_driving_ros/src/: READMED.md
slam_in_autonomous_driving_ros/src/ch2/imu_integration/: CMakeLists.txt  package.xml
slam_in_autonomous_driving_ros/src/ch2/imu_integration/include/imu_integration/: imu_integration copy.h  imu_integration.cpp  imu_integration.h
slam_in_autonomous_driving_ros/src/ch2/imu_integration/src/: imu_integration.cpp  imu_integration_node.cpp
slam_in_autonomous_driving_ros/src/common/: CMakeLists.txt  package.xml
slam_in_autonomous_driving_ros/src/common/include/common/: eigen_types.h
slam_in_autonomous_driving_ros/src/data/: state.txt  tum.txt
slam_in_autonomous_driving_ros/src/lio/: CMakeLists copy.txt  CMakeLists.txt  package.xml
slam_in_autonomous_driving_ros/src/lio/config/: config.yaml
slam_in_autonomous_driving_ros/src/lio/data/pcd/: 1.pcd  1689524965.156614.pcd  1689524965.256725.pcd  1689524965.356734.pcd  1689524965.456711.pcd  1689524965.556639.pcd  1689524965.656605.pcd  1689524965.756540.pcd  1689524965.856600.pcd  1689524965.956525.pcd  1689524966.056554.pcd  1689524966.156545.pcd  1689524966.256572.pcd  1689524966.356498.pcd  1689524966.456414.pcd  1689524966.556428.pcd  1689524966.656539.pcd  1689524966.756624.pcd  1689524966.856530.pcd  1689524966.956382.pcd
slam_in_autonomous_driving_ros/src/lio/include/: eigen_types.h  icp_2d copy.cpp  icp_2d.cpp  icp_2d.h  icp_2d_copy.cpp  imu.h  imu_pre.cpp  imu_pre.h  kdtree.cpp  kdtree.h  math_utils.h  nav_state.h  occupancy_map.cpp  occupancy_map.h  odom.h  point_types.h  static_imu_init.cpp  static_imu_init.h  utility_lio.h
slam_in_autonomous_driving_ros/src/lio/include/common/: common.hpp  eigen_types.hpp  point_cloud_utils.hpp  point_types.hpp
slam_in_autonomous_driving_ros/src/lio/include/gmapping/: gmapping copy.h  gmapping.h
slam_in_autonomous_driving_ros/src/lio/include/gmapping/grid/: map.h
slam_in_autonomous_driving_ros/src/lio/include/lio/: imu_preintegration.h
slam_in_autonomous_driving_ros/src/lio/include/lio/mapping/front_end/: front_end.cpp  front_end.hpp
slam_in_autonomous_driving_ros/src/lio/include/lio/models/cloud_filter/: cloud_filter_interface.hpp  voxel_filter.cpp  voxel_filter.hpp
slam_in_autonomous_driving_ros/src/lio/include/lio/models/registration/: ndt_registration.cpp  ndt_registration.hpp  registration_interface.hpp
slam_in_autonomous_driving_ros/src/lio/include/lio/publisher/: cloud_publisher.cpp  cloud_publisher.hpp  odometry_piblisher.cpp  odometry_publisher.hpp
slam_in_autonomous_driving_ros/src/lio/include/lio/sensors/: cloud_data.hpp  imu_data.cpp  imu_data.hpp
slam_in_autonomous_driving_ros/src/lio/include/lio/subcriber/: cloud_subscriber.cpp  cloud_subscriber.hpp
slam_in_autonomous_driving_ros/src/lio/include/lio/tf2/: tf2_broadcaster.cpp  tf2_broadcaster.hpp
slam_in_autonomous_driving_ros/src/lio/launch/: start.launch
slam_in_autonomous_driving_ros/src/lio/param/: params.yaml
slam_in_autonomous_driving_ros/src/lio/src/: icp_node.cpp  imu_pre_node.cpp  imu_preintegration_node.cpp  kdtree_node.cpp  occupancy_node.cpp
slam_in_autonomous_driving_ros/src/lio/src/gmapping/: gmapping copy.cc  gmapping.cc
slam_in_autonomous_driving_ros/src/lio/src/nodes/: cloud_node.cpp  imu_node.cpp
slam_in_autonomous_driving_ros/src/lio/src/test/: helloworld copy.cc  helloworld.cc
slam_in_autonomous_driving_ros/src/scripts/: plot_ch3_state.py
src/: CMakeLists.txt
src/ch2/: CMakeLists.txt  motion_g.cc
src/ch3/: CMakeLists.txt  process_gnss.cc  run_eskf_gins.cc
src/ch5/: kdtree.cc  kdtree.h
